--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h2 class="mb-4">Coming Online soon!!!</h2>
+          <h2 class="mb-4">Coming Online soon!</h2>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
         </div>
